# filesremote

./: .gitattributes  .gitignore  CMakeLists.txt  FilesRemote.desktop  Info.plist  LICENSE  README.DEVELOPER.md  README.md  licensestrings.h  main.cpp  resource.rc  sftptest.cpp  version.h.in
graphics/appicon/: README.md  icon.icns  icon_64x64.xpm
graphics/ui/: README.md  convert_to_c.sh  ui_icons.h  uiicons.data.h
graphics/ui/tango-icon-theme-0.8.90/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  index.theme.in  svg2png.sh.in
graphics/ui/tango-icon-theme-0.8.90/po/: Makefile.in.in  POTFILES.in
graphics/ui/tango-icon-theme-0.8.90/scalable/: Makefile.am  Makefile.in
icon/: icon.icns  icon_48x48.xpm
src/: CMakeLists.txt  artprovider.cpp  artprovider.h  channel.h  connectdialog.cpp  connectdialog.h  direntry.cpp  direntry.h  dirlistctrl.cpp  dirlistctrl.h  filemanagerframe.cpp  filemanagerframe.h  filesystem.osx.polyfills.h  hostdesc.cpp  hostdesc.h  ids.h  licensestrings.cpp  licensestrings.h  main.cpp  passworddialog.cpp  passworddialog.h  paths.cpp  paths.h  preferencespanel.cpp  preferencespanel.h  resource.rc  sftpconnection.cpp  sftpconnection.h  sftpthread.cpp  sftpthread.h  storageunits.cpp  storageunits.h  string.cpp  string.h
